[gd_scene load_steps=6 format=3 uid="uid://503osc6reblk"]

[ext_resource type="Script" path="res://Scripts/PlayerProfile/player_profile_ui.gd" id="1_lt7c1"]
[ext_resource type="Theme" uid="uid://w0bhlln4xhbw" path="res://Themes/Custom_Default/Custom_Default_Wood.tres" id="2_pql38"]
[ext_resource type="Texture2D" uid="uid://dxqthyrktxgfq" path="res://Assets/2D Assets/OtherImages/defaultUser.webp" id="4_pus15"]
[ext_resource type="Texture2D" uid="uid://clguc45t1tq2o" path="res://Assets/2D Assets/OtherImages/defaultUserHover.webp" id="5_xe1gp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iwiv5"]

[node name="PlayerProfileUI" type="CanvasLayer"]
script = ExtResource("1_lt7c1")

[node name="MainBackground" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -469.0
offset_top = -325.0
offset_right = 182.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.44, 2.28)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_pql38")

[node name="MainContainer" type="VBoxContainer" parent="MainBackground"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainBackground/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HListingsContainer" type="VBoxContainer" parent="MainBackground/MainContainer/MarginContainer"]
layout_mode = 2

[node name="UserDetailsContainer" type="HBoxContainer" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer"]
custom_minimum_size = Vector2(50, 45)
layout_mode = 2
size_flags_vertical = 0

[node name="ProfileBackground" type="Panel" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/UserDetailsContainer"]
custom_minimum_size = Vector2(65, 45)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="ProfilePicButton" type="TextureButton" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/UserDetailsContainer/ProfileBackground" groups=["ConfirmButtons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.175, 0.175)
pivot_offset = Vector2(100, 100)
texture_normal = ExtResource("4_pus15")
texture_hover = ExtResource("5_xe1gp")
stretch_mode = 5

[node name="UsernameFrame" type="Panel" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/UserDetailsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_iwiv5")

[node name="UsernameBox" type="LineEdit" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/UserDetailsContainer/UsernameFrame"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -25.0
offset_right = 200.0
grow_vertical = 0
size_flags_vertical = 8
placeholder_text = "User Name"
max_length = 50
expand_to_text_length = true

[node name="HorizontalLine" type="ColorRect" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.321569)

[node name="InvertSelectMethodContainer" type="HBoxContainer" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer"]
layout_mode = 2

[node name="InvertSelectMethodLabel" type="Label" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/InvertSelectMethodContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = " Invert Selection Method : "

[node name="CheckButton" type="CheckButton" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/InvertSelectMethodContainer" groups=["SwitchButtons"]]
layout_mode = 2
size_flags_horizontal = 2

[node name="AlignDiceContainer" type="HBoxContainer" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer"]
layout_mode = 2

[node name="AlignDiceLabel" type="Label" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/AlignDiceContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "Auto Align Rolled Dice : "

[node name="CheckButton" type="CheckButton" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/AlignDiceContainer" groups=["SwitchButtons"]]
layout_mode = 2
size_flags_horizontal = 2

[node name="SFXVolumeContainer" type="HBoxContainer" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = " SFX Volume : "

[node name="SliderContainer" type="HBoxContainer" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slider" type="HSlider" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/SFXVolumeContainer/SliderContainer" groups=["Sliders"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 4.8
value = 100.0

[node name="Value" type="Label" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/SFXVolumeContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "100%"
horizontal_alignment = 1

[node name="MusicVolumeContainer" type="HBoxContainer" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = " Music Volume : "

[node name="SliderContainer" type="HBoxContainer" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slider" type="HSlider" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/MusicVolumeContainer/SliderContainer" groups=["Sliders"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 4.8
value = 100.0

[node name="Value" type="Label" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer/MusicVolumeContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "100%"
horizontal_alignment = 1

[node name="Spacing" type="Control" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="BackToHomeButton" type="Button" parent="MainBackground/MainContainer/MarginContainer/HListingsContainer" groups=["BackButtons"]]
layout_mode = 2
size_flags_vertical = 10
text = "Back To Home"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(310, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.bmp")
